test/spec_vectors/simd_bitwise/fail/module_15.wat
(module (func (result v128) (v128.andnot (v128.const i32x4 0 0 0 0) (i32.const 0))))